--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3VubnktbW91c2UtNzQuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_mU0Q9Tv6oI8sklyAXVgrRN22l4lURVzUyCl8mAjNKY
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
