--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "antd": "^5.22.7",
+    "mongoose": "^8.9.3",
     "next": "14.2.22",
     "react": "^18",
     "react-dom": "^18"
