--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ CLERK_SECRET_KEY=sk_test_mU0Q9Tv6oI8sklyAXVgrRN22l4lURVzUyCl8mAjNKY
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
-DATABASE_URL=mongodb://localhost:27017/elearn
+DATABASE_URL=mongodb://127.0.0.1:27017/elearn
