--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "antd": "^5.22.7",
+    "lucide-react": "^0.469.0",
     "mongoose": "^8.9.3",
     "next": "14.2.22",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
