--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.22",
     "react": "^18",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
