--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "antd": "^5.22.7",
+    "firebase": "^11.1.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.3",
     "next": "14.2.22",
     "react": "^18",
     "react-dom": "^18",
     "react-quill": "^2.0.0",
+    "supabase": "^2.2.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
